Fixed default dashboard dialog alignment

--- a/web/css/mig.css
+++ b/web/css/mig.css
@@ -47,13 +47,13 @@
 	display: none;
 }
 
-.dialog{
+.dojoDialog{
     background-color:#FFF;
     width:300px;
     height:235px;
 }
 
-.dialogBody{
+.dojoDialogBody{
     padding-left:6px;
     padding-right:6px;
 }
@@ -64,7 +64,7 @@
     padding:3px;
 }
 
-.dialogFooter{
+.dojoDialogFooter{
     height:26px;
     background-color:#efefef;
     bottom:0;
@@ -73,7 +73,7 @@
     padding:5px 3px 0;
 }
 
-.dialogHeader{
+.dojoDialogHeader{
     background-color:#60A5EA;
     color:#FFF;
     font-size:12px;
@@ -81,7 +81,7 @@
     padding:3px;
 }
 
-.dialogMessage{
+.dojoDialogMessage{
     background:#EFEFEF none repeat scroll 0;
     color:red;
     padding:7px;
